fixed delete route

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   background-color: black;
   color: skyblue;
   font-family: 'Pacifico';
@@ -48,7 +48,7 @@ button:hover {
 
 form {
   text-align: right;
-}
+} */
 
 /* .parkContainer {
   text-align: center;
